samples/_failures_safe/1761392420_40d4a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a90538c2.c: In function ‘main’:
./samples/SAFE/__tmp_a90538c2.c:179:5: error: expected expression at end of input
  179 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_a90538c2.c:179:5: error: expected declaration or statement at end of input
